--- a/src/css/variaveis.css
+++ b/src/css/variaveis.css
@@ -1,12 +1,11 @@
 :root {
-    --cor-primaria: #43bd8e;
-    --cor-secundaria: #FD6C22;    
-    --cor-branca: #fff;
-    --cor-fundo-escuro: #040203;    
-    --cor-fundo-cinza-escuro: #282828;
-    --cor-fundo-cinza-claro: #353535;    
-  }
-    
+  --cor-primaria: rgba(170, 255, 255, 0.747);
+  --cor-secundaria: #FD6C22;    
+  --cor-branca: #fff;
+  --cor-fundo-escuro: #353535;    
+  --cor-fundo-cinza-escuro: #241129;
+  --cor-fundo-cinza-claro: #353535;    
+}
   :root {
     --fonte-primaria: 'Poppins', sans serif;
     --fonte-secundaria: 'Raleway', sans serif;
